[tool.poetry]
name = "interview-platform-deployment"
version = "0.1.0"
description = "Deployment infrastructure for Interview Platform"
authors = ["aminehd <aminehd@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "deployment"}]

[tool.poetry.dependencies]
python = "^3.12"
google-cloud-aiplatform = "^1.38.0"
google-cloud-run = "^0.10.0"
google-cloud-storage = "^2.10.0"
absl-py = "^1.4.0"
click = "^8.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
black = "^23.0.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
